        Requested by Hyatt.

- internal part of http://bugs.webkit.org/show_bug.cgi?id=13529
          DOM3 keyIdentifier text is incorrect

        * platform/win/KeyEventWin.cpp:
        (WebCore::keyIdentifierForWindowsKeyCode): Use 4 digits for "U+" stuff.



git-svn-id: http://svn.webkit.org/repository/webkit/branches/WindowsMerge@23359 268f45cc-cd09-0410-ab3c-d52691b4dbfc